# mountains-tui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config-idea.md  kBShortcuts.md  test_modifiers.rs
src/: app.rs  assets.rs  config.rs  db_manager.rs  elevation_stats.rs  file_manager.rs  main.rs  miles_stats.rs  models.rs
src/events/: handlers.rs  mod.rs
src/models/: field_accessor.rs
src/ui/: components.rs  mod.rs  modals.rs  screens.rs
src/ui/screens/: config_sync.rs  confirmations.rs  daily_view.rs  help.rs  home.rs  inputs.rs  mod.rs  startup.rs  statistics.rs
