[package]
name = "mountains"
version = "0.6.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
libsql = "0.9.24"
tokio = { version = "1.42", features = ["rt", "macros", "sync"] }
toml = "1.0"

[dev-dependencies]
tempfile = "3"
